<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <!--Top Image-->
    <ImageView
        android:id="@+id/imgTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180mdp"
        android:scaleType="centerCrop"
        android:src="@drawable/falling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Tutorial Text -->
    <TextView
        android:id="@+id/txtTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10mdp"
        android:text="@string/tutorial"
        android:textColor="@color/white"
        android:textSize="@dimen/_16font_mdp"
        android:fontFamily="sans-serif-medium"
        android:layout_margin="@dimen/_20mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgTop" />
    <!--Rate Score-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_20mdp"
        android:padding="@dimen/_4mdp"
        android:id="@+id/txtScore"
        android:text="@string/score"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/_16font_mdp"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--Start game button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textSize="@dimen/_20font_mdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/_10mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>