<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.GameFragment">
    <!--top layout-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20mdp"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold|italic"
                    android:fontFamily="sans-serif"
                    android:text="@string/score" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!--Translation Layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/trLay"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toTopOf="@id/btn_correct"
        android:gravity="center_horizontal">
        <!--Text Translate-->
        <TextView
            android:id="@+id/txtTranslate"
            android:textColor="@color/orange"
            android:textSize="@dimen/_24font_mdp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <!--Correct-->
    <Button
        android:id="@+id/btn_correct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/correct"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3" />
    <!--Wrong-->
    <Button
        android:id="@+id/btn_wrong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/wrong"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>